# Grafyn

./: .gitignore  CHATGPT_MCP_SETUP_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  HOW_TO_RUN.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TESTING_PROGRESS.md  TWIN_ACCURACY_ROADMAP.md  TWIN_RAG_SPEC.md  WORKING_GUIDE.md  error.txt  error_output.txt  main.py  package-lock.json  pyproject.toml  test_api_diag.py  test_chatgpt_data.json  test_import.py  test_model.py  test_unit.py
.claude/: settings.local.json
.cloudflare/: worker.js  wrangler.toml
.github/: dependabot.yml  release.yml
.github/workflows/: latest-deps.yml  release-smoke.yml  release.yml  test.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  build-exe.py  docker-compose.yml  grafyn.spec  pytest.ini  requirements-dev.txt  requirements.txt  seedream.spec  test_llm_integration.py
backend/app/: __init__.py  config.py  main.py
backend/app/mcp/: __init__.py  oauth.py  server.py  tools.py  write_tools.py
backend/app/middleware/: logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  canvas.py  distillation.py  feedback.py  import_models.py  note.py
backend/app/routers/: __init__.py  canvas.py  conversation_import.py  distill.py  feedback.py  graph.py  mcp_write.py  memory.py  notes.py  oauth.py  priority.py  search.py  zettelkasten.py
backend/app/services/: __init__.py  canvas_store.py  distillation.py  embedding.py  feedback.py  graph_index.py  import_service.py  knowledge_store.py  link_discovery.py  memory.py  openrouter.py  priority_scoring.py  priority_settings.py  token_store.py  vector_search.py
backend/app/utils/: __init__.py  dependencies.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/fixtures/: sample_notes.py
backend/tests/integration/: test_canvas_api.py  test_conversation_import_api.py  test_distill_api.py  (+10 more)
cleanup/: ACTION-PLAN.md  abstractions-report.md  api-surface-report.md  duplication-report.md
data/: .encryption_key
docs/: IMPROVEMENTS.md  api-contracts-backend.md  architecture-backend.md  architecture-frontend.md  canvas-architecture.md  chat-ingestion-guide.md  component-inventory-frontend.md  data-models-backend.md  development-guide-backend.md  development-guide-frontend.md  getting-started.md  index.md  integration-architecture.md  project-overview.md  source-tree-analysis.md
docs/consolidation/: README.md  phase-1-python-settings-chat.md  phase-2-sidecar-infrastructure.md  phase-3-frontend-rewiring.md  phase-4-rust-cleanup.md  phase-5-mcp-rewrite.md  phase-6-cicd-update.md  phase-7-chat-with-notes.md
e2e/: README.md  package-lock.json  package.json  playwright.config.js
e2e/tests/: api.spec.js  auth.spec.js  canvas.spec.js  feedback.spec.js  markdown.spec.js  navigation.spec.js  note-crud.spec.js  search.spec.js  settings.spec.js
frontend/: .eslintrc.cjs  .gitignore  README.md  TESTING.md  build-tauri.bat  index.html  jsconfig.json  package-lock.json  package.json  run-tauri-dev.bat  run-tauri-dev.sh  vite.config.js  vitest.config.js
frontend/scripts/: build-sidecar.cjs  bump-version.cjs  check-file-sizes.cjs  generate-icons.cjs  generate-updater-manifest.cjs  prepare-sidecar.cjs  release-tag.cjs  release-utils.cjs  release-verify.cjs  run-tauri.cjs
frontend/src/: App.vue  main.js  style.css
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs  mcp.rs  mcp_tools.rs
frontend/src-tauri/src/commands/: boot.rs  canvas.rs  chat.rs  distill.rs  feedback.rs  graph.rs  import.rs  mcp.rs  memory.rs  migration.rs  mod.rs  notes.rs  priority.rs  retrieval.rs  search.rs  settings.rs  twin.rs  zettelkasten.rs
frontend/src-tauri/src/commands/canvas/: context.rs  debate.rs  mod.rs  session.rs  shared.rs  streaming.rs  test_support.rs
frontend/src-tauri/src/models/: boot.rs  canvas.rs  feedback.rs  import.rs  link_discovery.rs  memory.rs  migration.rs  mod.rs  note.rs  settings.rs  twin.rs
frontend/src-tauri/src/services/: atomic_io.rs  canvas_store.rs  chunk_index.rs  feedback.rs  graph_index.rs  index_commit.rs  knowledge_store.rs  link_discovery.rs  markdown_migration.rs  mcp_sidecar.rs  memory.rs  mod.rs  ollama.rs  openrouter.rs  priority.rs  retrieval.rs  search.rs  settings.rs  similarity.rs  texttiling.rs  topic_hub.rs  twin_store.rs  utf8_chunk.rs  vault_optimizer.rs  yake.rs
frontend/src-tauri/src/services/import/: chatgpt.rs  claude.rs  document.rs  gemini.rs  grok.rs  mod.rs  semantic_links.rs  transcript.rs
frontend/src-tauri/src/services/twin/: constitution.rs  decisions.rs  digest.rs  export.rs  mod.rs  records.rs  shared.rs  traces.rs
memory-bank/: README.md
memory-bank/01-project-context/: evolution.md  history.md  milestones.md
memory-bank/02-architecture-decisions/: README.md  adr-001-technology-stack.md  adr-002-architecture-pattern.md  adr-003-mcp-integration.md  adr-004-data-model.md  adr-005-embedding-model.md  adr-006-oauth-authentication.md
memory-bank/03-development-patterns/: backend-patterns.md  coding-standards.md  frontend-patterns.md  testing-patterns.md
memory-bank/04-known-issues/: backend-issues.md  frontend-issues.md
memory-bank/05-configuration/: environment-variables.md  setup-guide.md  troubleshooting.md
memory-bank/06-quick-reference/: api-endpoints.md  data-models.md  services.md
memory-bank/07-workflows/: contribution-workflow.md  deployment-workflow.md  development-workflow.md
(+155 files in other folders)
