[package]
name = "grafyn"
version = "0.0.2"
description = "Grafyn - Knowledge Management Desktop App"
authors = ["Bryan"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core
# Note: Using explicit features instead of api-all to enable shell-sidecar without shell-all
tauri = { version = "1.8", features = [
    "clipboard-all",
    "dialog-all",
    "fs-all",
    "global-shortcut-all",
    "notification-all",
    "os-all",
    "path-all",
    "process-all",
    "protocol-all",
    "shell-sidecar",
    "updater",
    "window-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File handling
gray_matter = "0.2"
walkdir = "2.4"
notify = "6.1"
serde_yaml = "0.9"

# Search
tantivy = "0.22"

# Graph data structure
petgraph = "0.6"

# Regex for wikilink parsing
regex = "1.10"
lazy_static = "1.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for OpenRouter
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# System paths
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
