[package]
name = "grafyn"
version = "0.1.8"
description = "Grafyn - Knowledge Management Desktop App"
authors = ["Bryan"]
license = "GPL-3.0-only"
repository = "https://github.com/WKJBryan/Grafyn"
edition = "2021"

# Two binaries: Tauri desktop app and standalone MCP server
[[bin]]
name = "grafyn"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "grafyn-mcp"
path = "src/mcp.rs"
required-features = ["mcp"]

[build-dependencies]
tauri-build = { version = "1.5", features = [], optional = true }

[dependencies]
# Tauri core (optional — only needed for the desktop app binary)
tauri = { version = "1.8", optional = true, features = [
    "dialog-all",
    "fs-all",
    "path-all",
    "process-all",
    "protocol-all",
    "shell-open",
    "updater",
    "window-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "fs", "io-util", "time"] }

# File handling
gray_matter = "0.2"
walkdir = "2.4"
notify = "6.1"
serde_yaml = "0.9"

# Search
tantivy = "0.26"

# Graph data structure
petgraph = "0.6"

# Regex for wikilink parsing
regex = "1.10"
lazy_static = "1.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# HTTP client for OpenRouter
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# System paths
dirs = "5.0"
keyring = "2.3"

# MCP server (optional — only needed for the grafyn-mcp binary)
rmcp = { version = "0.15", features = ["server", "transport-io"], optional = true }
schemars = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["tauri-app", "custom-protocol"]
tauri-app = ["dep:tauri", "dep:tauri-build"]
custom-protocol = ["tauri-app", "tauri/custom-protocol"]
mcp = ["dep:rmcp", "dep:schemars", "dep:clap"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
